; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_serialize.c_serialize_fd.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_serialize.c_serialize_fd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [55 x i8] c"Failed to add file descriptor to serialization set: %m\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%i\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @serialize_fd(i8* %0, i32* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @assert(i8* %11)
  %13 = load i8*, i8** %8, align 8
  %14 = call i32 @assert(i8* %13)
  %15 = load i32, i32* %9, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %32

18:                                               ; preds = %4
  %19 = load i32*, i32** %7, align 8
  %20 = load i32, i32* %9, align 4
  %21 = call i32 @fdset_put_dup(i32* %19, i32 %20)
  store i32 %21, i32* %10, align 4
  %22 = load i32, i32* %10, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %18
  %25 = load i32, i32* %10, align 4
  %26 = call i32 @log_error_errno(i32 %25, i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0))
  store i32 %26, i32* %5, align 4
  br label %32

27:                                               ; preds = %18
  %28 = load i8*, i8** %6, align 8
  %29 = load i8*, i8** %8, align 8
  %30 = load i32, i32* %10, align 4
  %31 = call i32 @serialize_item_format(i8* %28, i8* %29, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32 %30)
  store i32 %31, i32* %5, align 4
  br label %32

32:                                               ; preds = %27, %24, %17
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i32 @fdset_put_dup(i32*, i32) #1

declare dso_local i32 @log_error_errno(i32, i8*) #1

declare dso_local i32 @serialize_item_format(i8*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
